--- a/.gitignore
+++ b/.gitignore
@@ -17,37 +17,13 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
- $PROJDIR/Temp/
- $PROJDIR/Library/
- $PROJDIR/Obj/
+Temp/*
+Library/*
+Obj/*
  
- *.csproj
- *.unityproj
- *.sln
- *.user
- *.userprefs
- *.DS_store
+*.csproj
+*.unityproj
+*.sln
+*.user
+*.userprefs
+*.DS_store
